Rollback name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-pokemon-hangman-game",
+  "name": "react-hangman",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
